--- a/index.html
+++ b/index.html
@@ -11,15 +11,42 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="max-w-md min-h-screen mx-auto py-6 bg-gray-200">
-    <header>
-        <nav class="flex justify-center items-center">
-            <div class="mt-10">
-                <img src="./assets/bg.png" alt="">
-                <img src="./assets/Group.png" alt="">
+<body class="bg-slate-800">
+    <section class="max-w-md  min-h-screen mx-auto py-6 bg-gray-200">
+        <header>
+            <nav class="flex justify-center items-center mt-6">
+                <div class="mt-10 relative flex justify-center items-center w-9/12
+                mb-10 ">
+                    <img class="w-48 absolute" src="./assets/bg.png" alt="">
+                    <img class="w-16" src="./assets/Group.png" alt="">
+                </div>
+            </nav>
+        </header>
+
+        <!-- Login Section -->
+        <div class="  ">
+            <div class="hero-content flex-col lg:flex-row-reverse">
+
+                <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <form class="card-body">
+                        <fieldset class="fieldset">
+                            <label class="fieldset-label">Account Number</label>
+                            <input value="01718830661" id="Account-number" type="number" class="input"
+                                placeholder="Type Account Number" required />
+                            <label class="fieldset-label">PIN</label>
+                            <input value="1234" id="pin" type="text" class="input" placeholder="Type your PIN"
+                                required />
+                            <div><a class="link link-hover">Forgot password?</a></div>
+                            <button id="login-btn" class="btn btn-neutral mt-4">Login</button>
+                        </fieldset>
+                    </form>
+                </div>
             </div>
-        </nav>
-    </header>
+        </div>
+
+
+    </section>
+    <script src="./script/login.js"></script>
 </body>
 
 </html>
