--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
             <nav class="flex justify-around items-center">
                 <img class="w-16" src="./assets/Group.png" alt="">
                 <div>
-                    <h1  class="text-3xl font-bold">$ <span id="up-amount">4500</span></h1>
+                    <h1 class="text-3xl font-bold">$ <span id="up-amount">4500</span></h1>
                     <p class="border rounded p-1">Available Balance</p>
                 </div>
                 <button class="btn">Logout</button>
@@ -24,11 +24,11 @@
                 <h1 class="text-2xl font-bold mb-2"> Welcome to Payooo!</h1>
                 <p>Enjoy easy and convenient financial services with us. Cashout charge is low and </p>
                 <div class="cards grid grid-cols-3 mt-14 gap-2 p-2">
-                    <div class="box cursor-pointer border p-4 text-center rounded-sm">
+                    <div id="add-money-box" class="box cursor-pointer border p-4 text-center rounded-sm">
                         <img class="w-8 mx-auto" src="./assets/wallet1.png" alt="" srcset="">
                         <h3>Add Money</h3>
                     </div>
-                    <div class="box border p-4 text-center rounded-sm">
+                    <div id="cash-out-box" class="box border p-4 text-center rounded-sm">
                         <img class="w-8 mx-auto" src="./assets/wallet1.png" alt="" srcset="">
                         <h3>Cashout</h3>
                     </div>
@@ -49,8 +49,8 @@
                         <h3>Transiction</h3>
                     </div>
                 </div>
-                <section>
-                    <h1>Add Money Section</h1>
+                <section id="addmoney" class="">
+                    <h1 class="mr-8">Add Money Section</h1>
                     <div class="">
                         <div class="hero-content flex-col lg:flex-row-reverse">
 
@@ -82,10 +82,38 @@
                         </div>
                     </div>
                 </section>
+                <section id="cashout">
+                    <h2>Cash Out</h2>
+                    <div class="">
+                        <div class="hero-content flex-col lg:flex-row-reverse">
+                            <div class="card w-full max-w-sm shrink-0 shadow-2xl">
+                                <div class="card-body">
+                                    <fieldset class="fieldset">
+                                        <label class="fieldset-label">Account Number</label>
+                                        <input value="01718830661" id="Account-number" type="number" class="input"
+                                            placeholder="Type Account Number" required />
+                                        <label class="fieldset-label">Amount Number</label>
+                                        <input value="" id="cashout-Amount-number" type="number" class="input"
+                                            placeholder="Type Amount" required />
+                                        <label class="fieldset-label">PIN</label>
+                                        <input value="1234" id="cashout-pin" type="text" class="input"
+                                            placeholder="Type your PIN" required />
+                                        <div><a class="link link-hover">Forgot password?</a></div>
+                                        <button id="cash-out-btn" class="btn btn-neutral bg-blue-700 mt-4">
+                                            Cash Out
+                                        </button>
+                                    </fieldset>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
             </section>
 
         </header>
     </section>
+    <script src="./script/toggle.js"></script>
     <script src="./script/addmoney.js"></script>
 </body>
 
